Adiciona função que muda o valor de UF ao mudar o select do estado

--- a/index.html
+++ b/index.html
@@ -23,14 +23,12 @@
       <div>
          <label for="uf">Estado:</label>
          <select name="estado" id="estado">
-            
+            <option>Escolha um Estado</option>
          </select>
       </div>
       <div>
          <label for="uf">UF:</label>
-         <select name="uf" id="uf">
-            
-         </select>
+         <input type="text" name="uf" id="uf">
       </div>
       <div>
          <label for="uf">Municipio: </label>
